# resume-ats-checker

./: .env.example  .gitignore  AGENTS.md  PROJECT.md  justfile  package.json  sentry.client.config.js  sentry.server.config.js  turbo.json
apps/ai-ml/: black.toml  main.py  pyproject.toml
apps/ai-ml/api/: config.py  model_class.py  view.py
apps/ai-ml/model/: __init__.py
apps/ai-ml/model/resume_sections_model/: train.ipynb
apps/ai-ml/model/skills_extraction_model/: train.ipynb
apps/ai-ml/model/skills_keyword_model/: config.py
apps/ai-ml/model/tone_detection_model/: readme.md
apps/ai-ml/model/translation_model/: config.py
apps/ai-ml/rag/: embedding_model.py  readme.md  util.py  vector_store.py
apps/ai-ml/train/: readme.md
apps/ai-ml/train/job_type_model/: config.py  readme.md
apps/ai-ml/train/job_type_model/rag_dataset/: .gitignore  browser_stealth.py  embedding_model.py  generation.py  labels.py  orchestrate.py  util.py  vector_store.py
apps/ai-ml/train/job_type_model/rag_dataset/dataset/: readme.md
apps/ai-ml/train/resume_sections_model/: config.py  resume_sections_model.ipynb
apps/ai-ml/train/skills_extraction_model/: config.py  readme.md  skill_extraction_model.ipynb
apps/ai-ml/train/tone_detection_model/: config.py  tone_detection_model.ipynb  train.ipynb
apps/ai-ml/train/tone_detection_model/model/: vectorizer.pkl
apps/android/: pubspec.yaml
apps/backend/: README.md  go.mod  go.sum  justfile  main.go  makefile  pyproject.toml  readme.md  sqlc.yaml
apps/ios/: pubspec.yaml
apps/linux/: pubspec.yaml
apps/macos/: pubspec.yaml
(+198 files in other folders)
